--- a/README.org
+++ b/README.org
@@ -1,2 +1,3 @@
-🔑 Embedded developer @parakey.co
-🌀 Previously @im.se
+Embedded developer [[https://www.parakey.co][@parakey.co]] 🔑 \\
+Previously [[https://im.se][@im.se]] 🌀
+
