--- a/README.org
+++ b/README.org
@@ -1,8 +1,10 @@
-* About me
+* 🌱 About me
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]
 
-🧙‍♂️ Previously: Wearing hats on both ends at [[http://imi.se][@imi.se]]
-------
-🌱 Emacs > Vi.
+🧙‍♂️ Previously: Senior software wrangler at [[http://imi.se][@imi.se]]
 
-🪐 Spaces > Tabs.
+-----
+
+Most interested in high-performance, low-level code, but I also have extensive experience in web development and database optimization.
+------
+Emacs over vim, spaces over tabs.
