--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-** 🌱 About me
+** Hello 🙋‍♂️
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]
 
 🧙‍♂️ Previously: Senior software wrangler at [[http://imi.se][@imi.se]]
