--- a/README.org
+++ b/README.org
@@ -5,9 +5,10 @@
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]\\
 🧙‍♂️ Previously: Senior software wrangler at [[http://imi.se][@imi.se]]
 
-I am most enthusiastic about high-performance, low-level code, but I also have extensive experience in web development and database optimization.
+I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization.
 
-My interests are Emacs and space-indentation.
+My hobbies are Emacs and just kickin it.
 
 ** Contact
 If you need me, I'm on my mobile[[https://www.youtube.com/watch?v=wj5UJ7vdVIw][.]]
+
