--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]\\
 🧙‍♂️ Previously: Senior software wrangler and integration guru at [[http://imi.se][@imi.se]]
 
-I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization. I have also developed software for customized integrations, fine-tuning the symphonies between large, critical systems.
+I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization. I have also developed software for systems integration, fine-tuning the symphonies between large, critical systems.
 In addition, I have also done work in Unix system management and configuration, specializing in both Linux and IBM AIX. 
 
 [[https://github.com/niklasva/dotfiles/blob/main/emacs/.config/emacs/config.org][✨]] My hobbies are Emacs and just kickin it. 👒
