--- a/README.org
+++ b/README.org
@@ -5,11 +5,17 @@
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]\\
 🧙‍♂️ Previously: Senior software wrangler and integration guru at [[http://imi.se][@imi.se]]
 
-I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization. I have also developed software for systems integration, fine-tuning the symphonies between large, critical systems.
-In addition, I have also done work in Unix system management and configuration, specializing in both Linux and IBM AIX. 
+I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization.
+
+I have also specialized in development of integration software, harmonizing colossal, mission-critical systems.
+In addition to this, I have also done work in Unix system management and configuration, specializing in both Linux and IBM AIX. 
+
+And probably a lot more. Let's talk.
 
 [[https://github.com/niklasva/dotfiles/blob/main/emacs/.config/emacs/config.org][🛀]] My hobbies are Emacs and just kickin it. ✨
 
 ** Contact
-[[https://www.youtube.com/watch?v=wj5UJ7vdVIw][💬]] If you need me, I'm on my mobile.
+[[https://www.youtube.com/watch?v=wj5UJ7vdVIw][💬]] If you need me, I'm on my mobile.'
+
+In the realm of software, I've woven intricate threads of systems integration, harmonizing colossal, mission-critical machinery. I'm also well-versed in the art of Unix system mastery, specializing in the enchanting realms of Linux and IBM AIX.
 
