--- a/README.org
+++ b/README.org
@@ -5,13 +5,13 @@
 🔐 Present mission: Embedded locksmithing at [[http://parakey.co][@parakey.co]]\\
 🧙‍♂️ Previously: Senior software wrangler and integration guru at [[http://imi.se][@imi.se]]
 
+#+html:<details>
+#+html:<summary><b>Experience</b></summary>
 I am most enthusiastic about high-performance, low-level code, but I also have experience in full-stack web development and database optimization.
 
 I have also specialized in development of integration software, harmonizing colossal, mission-critical systems.
 In addition to this, I have also done work in Unix system management and configuration, focusing on Linux and IBM AIX. 
-
-And probably a lot more. Let's talk.
-
+#+html:</details>
 [[https://github.com/niklasva/dotfiles/blob/main/emacs/.config/emacs/config.org][🛀]] My hobbies are Emacs and just kickin it. ✨
 
 ** Contact
